--- a/app/src/main/res/layout/knot_list_knot_row.xml
+++ b/app/src/main/res/layout/knot_list_knot_row.xml
@@ -33,9 +33,8 @@
         android:id="@+id/rvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:text=""
+        android:layout_toEndOf="@+id/circularKnotView"
         android:textSize="24sp" />
 
 
