--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -82,6 +82,7 @@
                 android:id="@+id/button_chatbox_send"
                 android:text="SEND"
                 android:textSize="14dp"
+                android:imeOptions="actionSend"
                 android:background="?attr/selectableItemBackground"
                 android:clickable="true"
                 android:layout_width="64dp"
