--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -22,36 +22,40 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <!-- ActionBar -->
-
-        <include
-            layout="@layout/toolbar"
+        <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="0dp"
+            android:layout_marginBottom="64dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-
-        <!-- Main content -->
-
-        <FrameLayout
-            android:id="@+id/feedContent"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
+            <!-- ActionBar -->
 
             <include
-                layout="@layout/content_feed"
+                layout="@layout/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+
+            <!-- Main content -->
+
+            <FrameLayout
+                android:id="@+id/feedContent"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+                app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        </FrameLayout>
-    </LinearLayout>
+
+                <include
+                    layout="@layout/content_feed"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+            </FrameLayout>
+        </LinearLayout>
 
     <!-- Navigation Drawer -->
 
@@ -59,36 +63,37 @@
             android:id="@+id/layout_chatbox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:minHeight="48dp"
             android:background="#ffffff"
+            android:minHeight="48dp"
+            android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
             <EditText
                 android:id="@+id/edittext_chatbox"
-                android:hint="Enter message"
-                android:background="@android:color/transparent"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
-                android:layout_width="0dp"
                 android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:maxLines="6"/>
+                android:background="@android:color/transparent"
+                android:hint="Enter message"
+                android:maxLines="6" />
 
             <Button
                 android:id="@+id/button_chatbox_send"
-                android:text="SEND"
-                android:textSize="14dp"
-                android:imeOptions="actionSend"
-                android:background="?attr/selectableItemBackground"
-                android:clickable="true"
                 android:layout_width="64dp"
                 android:layout_height="48dp"
+                android:layout_gravity="bottom"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
                 android:gravity="center"
-                android:layout_gravity="bottom" />
+                android:imeOptions="actionSend"
+                android:text="SEND"
+                android:textSize="14dp" />
 
         </LinearLayout>
 
